src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/Simple/ValidSimple.php
<?php

namespace Valid\Simple;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidSimple extends PluginBundle
{
}