src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/NonExistentConfigFile1/InvalidNonExistentConfigFile1.php
<?php

namespace Invalid\NonExistentConfigFile1;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidNonExistentConfigFile1 extends PluginBundle
{
}